# Trasnlit

./: CMakeLists.txt  Translate.cpp  Translate.h  main.cpp  tests.cpp
